# shnight

./: .gitignore  Dockerfile  docker-compose.yml  index_old  pyproject.toml  readme.md  requirements.txt  run.py
docs/: api-reference.md
nginx/: nginx-proxy.conf
public/: Dockerfile  package-lock.json  package.json
public/public/: index.html
public/src/: App.css  App.js  index.css  liberal.png-autosave.kra
public/src/components/: Game.js  Setup.js
public/src/pages/: home.js  joingame.js  lobby.js  newgame.js
public/src/pages/components/: header.js
shnight/: controller.py  core.py  game.py  routes.py  user.py
tests/: test_shnight.py
