[tool.poetry]
name = "shnight"
version = "0.1.0"
description = ""
authors = ["Nick Humrich <nick.humrich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
#aiohttp_sse = "^2.0"
#aiohttp = "3.5.4"
#aiohttp-cors = "^0.7.0"
uvicorn = "^0.11.3"
starlette = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
